Fixed float issue where About Me paragraph would be narrow on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,10 +60,9 @@ footer {
 /* About page */
 
 #about-image {
-    float: left;
     margin: 5px 20px 0 0;
     width: auto;
-    max-height: 160px;
+    max-height: 300px;
 }
 
 /* Portfolio page */
